--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
-/*  your css code here. If applicable */
+.btn-checkout {
+      background-color: #007bff;
+      color: white;
+      width: 100%;
+    }
+    .btn-checkout:hover {
+      background-color: #0056b3;
+    }
